--- a/BlogEmi/Views/Home/Register.cshtml
+++ b/BlogEmi/Views/Home/Register.cshtml
@@ -12,7 +12,7 @@
                 </div>
                 <div class="card-body">
                     <form asp-controller="Home" asp-action="Register" method="post">
-                        <input class="form-control mb-3" type="text" placeholder="Full Name" name="FullName" required />
+                        <input class="form-control mb-3" type="text" placeholder="User Name" name="UserName" required />
                         <input class="form-control mb-3" type="text" placeholder="Email" name="Email" required />
                         <input class="form-control mb-3" type="password" placeholder="Password" name="Password" required />
 
