--- a/BlogEmi/Views/Shared/_Layout.cshtml
+++ b/BlogEmi/Views/Shared/_Layout.cshtml
@@ -7,30 +7,38 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/BlogEmi.styles.css" asp-append-version="true" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BlogEmi</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                        </li>
+        <div class="containerHeader">
+
+            <div class="presentation">
+                <div class="name-header"> <p> 📁 emita.blog</p></div>
+                
+            </div>
+
+            <div class="c">
+                
+                <div class="content">
+                    <ul class="navList1">
+
+                        <li><a asp-controller="Post" asp-action="Create">📝 |</a></li>
+                        <li><a asp-controller="Home" asp-action="Blog">🏠 |</a></li>
+                        <li><a asp-controller="search" asp-action="search">🔎 </a></li>
+                    </ul>
+                    <ul class="navList2">
+                        <li><a asp-controller="Post" asp-action="Post">my posts |</a></li>
+                        <li><a asp-controller="Profile" asp-action="Profile">perfil </a></li>
                     </ul>
                 </div>
             </div>
-        </nav>
+            
+
+        </div>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -39,9 +47,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        @* <div class="container">
             &copy; 2025 - BlogEmi - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+        </div> *@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
